Fix horizontal scroller in firefox

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -262,5 +262,5 @@ app-meals-future app-meal:first-of-type ion-card {
   white-space: nowrap;
   overflow-x: scroll;
   overflow-y: hide;
-  -webkit-overflow-scrolling: touch;
+  scrollbar-width: none;
 }
